samples/_failures_safe/1761129092_b52fb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0a276e1.c:132: error: expected ‘;’, ‘,’ or ‘)’ at end of input
